# homepage

./: .gitignore  README.md  index.html  manifest.webmanifest  service-worker.js
.github/workflows/: deploy.yml  deployment.yml
docs/superpowers/plans/: 2026-05-24-startpage-redesign.md  2026-05-25-tailscale-and-most-visited.md  2026-05-26-backend-sync-redesign.md
docs/superpowers/specs/: 2026-05-24-startpage-redesign-design.md  2026-05-25-tailscale-and-most-visited-design.md  2026-05-26-backend-sync-design.md
js/: api.js  calendar.js  clipboard.js  clock.js  commands.js  config-manager.js  dashboard.js  data.js  engines.js  executors.js  favicons.js  help.js  helpers.js  icons.js  link-manager.js  main.js  notes.js  rss-reader.js  search-engine.js  search.js  shortcuts.js  statistics.js  stats.js  storage.js  sync.js  system-status.js  tailscale.js  theme.js  url-utils.js  weather.js
js/crud/: category-editor.js  dnd.js  link-editor.js  modal.js  settings.js
js/render/: grid.js  sidebar.js
server/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/app/: auth.py  config.py  db.py  main.py  schemas.py
server/app/routers/: clicks.py  favicon.py  handoff.py  health.py  meta.py  probes.py  stats.py  sync.py  tailscale.py  weather.py
server/app/services/: favicon_fetcher.py  handoff_bus.py  outbound.py  probe_loop.py  tailscale_cli.py
server/migrations/: 001_init.sql
server/tests/: conftest.py  test_auth.py  test_favicon.py  test_probes.py  test_sync.py
styles/: main.css
